# snpcert

./: .gitignore  INFRAFLOW.md  README.md  mkosi.conf
.github/scripts/: csv_to_markdown_table.py  csv_to_table_image.py
.github/workflows/: beacon-ci.yml  build-and-release.yml  build-guest.yml  build-host.yml  build.yml  development-images-release.yml  dispatch-ci.yml  generate-matrix-image.yml  lint.yml  update-certification-matrix.yml  update-matrix-table.yml
beacon/: Cargo.toml  README.md
beacon/devpath/: Cargo.toml  STYLE.md
beacon/devpath/src/: error.rs  lib.rs  node.rs  parser.rs  path.rs  paths.rs
beacon/devpath/src/acpi/: adr.rs  expanded.rs  mod.rs  nvdimm.rs  standard.rs
beacon/devpath/src/bios/: mod.rs  spec.rs
beacon/devpath/src/hw/: bmc.rs  controller.rs  memmap.rs  mod.rs  pccard.rs  pci.rs  vendor.rs
beacon/devpath/src/media/: cdrom.rs  file.rs  guid.rs  hd.rs  mod.rs  offset.rs  ramdisk.rs  vendor.rs
beacon/devpath/src/msg/: atapi.rs  bt.rs  btle.rs  dlu.rs  dns.rs  emmc.rs  fc.rs  i2o.rs  ib.rs  ieee1394.rs  ipv4.rs  ipv6.rs  iscsi.rs  mac.rs  mod.rs  nvdimm.rs  nvme.rs  nvme_of.rs  rest.rs  sasex.rs  sata.rs  scsi.rs  sd.rs  uart.rs  ufs.rs  uri.rs  usb.rs  vendor.rs  vlan.rs  wifi.rs
beacon/devpath/tests/: spec.rs
beacon/src/: main.rs
beacon/src/avahi/: browsing.rs  mod.rs  resolving.rs  types.rs
beacon/src/uefi/: bootinfo.rs  device_path.rs  efivar.rs  mod.rs
cert-matrix/: cert-matrix.csv
common/: mkosi.conf
common/mkosi.extra/etc/: fstab
common/mkosi.extra/usr/local/lib/systemd/system-preset/: 10-enable.preset
common/mkosi.repart/: esp.conf  root.conf  verity.conf
dispatch/: Cargo.toml  LICENSE  README.md  build.rs
dispatch/poweroff/: Cargo.toml  README.md
dispatch/poweroff/src/: main.rs
dispatch/src/: avahi.rs  github.rs  jobs.rs  main.rs
dispatch/src/http/: server.rs  service.rs
dispatch/src/tui/: mod.rs  status.rs  throbbing.rs
docs/: how-to-generate-certs.md  how-to-run-guest-manually.md
guest/: mkosi.conf
guest-debian-bookworm/: mkosi.conf
guest-fedora-41/: mkosi.conf
guest-ubuntu-oracular/: mkosi.conf
guest/debian/: mkosi.conf
guest/debian/bookworm/: mkosi.conf
guest/mkosi.extra/usr/local/lib/tmpfiles.d/: common.conf
guest/ubuntu/: mkosi.conf
images/guest-centos-10/: mkosi.build  mkosi.conf
images/guest-debian-bookworm/: mkosi.conf
images/guest-debian-trixie/: mkosi.conf
images/guest-fedora-41/: mkosi.conf
images/guest-rocky-10/: mkosi.conf
images/guest-ubuntu-oracular/: mkosi.conf
images/guest-ubuntu-plucky/: mkosi.conf
images/host-centos-10/: mkosi.conf  mkosi.postinst
images/host-debian-bookworm/: mkosi.conf
images/host-debian-trixie/: mkosi.conf
images/host-fedora-41/: mkosi.conf
images/host-rocky-10/: mkosi.conf  mkosi.postinst
images/host-ubuntu-oracular/: mkosi.conf
images/host-ubuntu-plucky/: mkosi.conf
images/host-ubuntu-plucky/load-kernel-modules/: mkosi.build
modules/beacon/: mkosi.build  mkosi.conf
modules/beacon/mkosi.extra/usr/local/lib/scripts/: beacon-report.sh
modules/beacon/mkosi.extra/usr/local/lib/systemd/system/: beacon-boot.service  (+1 more)
modules/beacon/mkosi.extra/usr/local/lib/systemd/system-preset/: 10-beacon.preset
modules/common/: mkosi.conf
modules/embed-guest-image/: mkosi.build  mkosi.conf
modules/format-qemu-binary/: mkosi.postinst
modules/fpaste-build/: mkosi.build
modules/guest/: mkosi.conf
modules/guest-measurement/: mkosi.conf
modules/guest-measurement/mkosi.extra/usr/local/lib/scripts/: guest_measurement.sh
modules/host/: mkosi.conf
modules/launch-snp-guest/mkosi.extra/usr/local/lib/scripts/: launch-guest.sh  verify-guest.sh
modules/load-kernel-modules/: mkosi.build
modules/logging/: README.md
modules/logging/capture-guest-logs-in-host/: README.md  mkosi.build
modules/logging/guest/: README.md
modules/ovmf-build/: mkosi.build  mkosi.conf
modules/pip-install-emoji/: mkosi.postinst
modules/reboot/mkosi.extra/usr/local/lib/scripts/: login-or-reboot.sh
modules/show-snp-guest-attestation/mkosi.extra/usr/local/lib/scripts/: show-snp-guest-attestation.sh  show-snp-guest-test-status.sh
modules/snpguest/: README.md
modules/snpguest-build/: mkosi.build
modules/snpguest/mkosi.extra/usr/local/lib/scripts/: snpguest_attestation.sh
modules/snphost/: mkosi.build
modules/snphost-build/: mkosi.build
modules/systemd-networkd-build/: mkosi.postinst
net/: mkosi.conf
net/guest/: mkosi.conf
net/guest/fedora/: mkosi.conf
net/guest/fedora/41/: mkosi.conf
net/guest/ubuntu/: mkosi.conf
net/guest/ubuntu/oracular/: mkosi.conf
net/mkosi.extra/usr/local/lib/systemd/network/: wired.network
poweroff/: README.md  mkosi.conf
poweroff/mkosi.extra/usr/local/lib/systemd/system/: poweroff.service
(+65 files in other folders)
