[package]
name = "devpath"
version = "0.1.0"
edition = "2021"
description = "UEFI Device Path parsing and manipulation library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AMDEPYC/snpcert"
readme = "README.md"
keywords = ["uefi", "device-path", "firmware", "boot", "efi"]
categories = ["embedded", "hardware-support", "parsing"]
rust-version = "1.87"
